# embedlet

./: CMakeLists.txt  README.md
docs/: README.md
examples/: example.c
include/: embedlet.h
sample_data/: README.md  create_embeddings.py  example_equivalent.py  requirements.txt  source.json
scripts/: build.bat  build.sh
tests/: test_embedlet.c
